[gd_scene load_steps=3 format=3 uid="uid://bslej8clt4cyx"]

[ext_resource type="Theme" uid="uid://dyswh45trxwxj" path="res://Assets/Themes/inkblut_classic.tres" id="1_theme"]
[ext_resource type="Script" path="res://Scenes/UI/game_hud.gd" id="2_script"]

[node name="GameHUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("1_theme")
script = ExtResource("2_script")

[node name="TopContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 80.0
grow_horizontal = 2

[node name="TimerContainer" type="VBoxContainer" parent="TopContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TimerLabel" type="Label" parent="TopContainer/TimerContainer"]
layout_mode = 2
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_constants/shadow_outline_size = 1
theme_override_font_sizes/font_size = 32
text = "3:00"
horizontal_alignment = 1

[node name="TimerSubLabel" type="Label" parent="TopContainer/TimerContainer"]
layout_mode = 2
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_constants/shadow_outline_size = 1
theme_override_font_sizes/font_size = 16
text = "MATCH TIME"
horizontal_alignment = 1

[node name="CoverageContainer" type="VBoxContainer" parent="TopContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CoverageLabel" type="Label" parent="TopContainer/CoverageContainer"]
layout_mode = 2
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_constants/shadow_outline_size = 1
theme_override_font_sizes/font_size = 24
text = "Coverage: 45.2%"
horizontal_alignment = 1

[node name="CoverageSubLabel" type="Label" parent="TopContainer/CoverageContainer"]
layout_mode = 2
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_constants/shadow_outline_size = 1
theme_override_font_sizes/font_size = 16
text = "YOUR TERRITORY"
horizontal_alignment = 1

[node name="BottomContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -80.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0

[node name="HealthContainer" type="VBoxContainer" parent="BottomContainer"]
layout_mode = 2
size_flags_horizontal = 0

[node name="HealthLabel" type="Label" parent="BottomContainer/HealthContainer"]
layout_mode = 2
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_constants/shadow_outline_size = 1
theme_override_font_sizes/font_size = 20
text = "HP: 3/3"

[node name="HealthBar" type="ProgressBar" parent="BottomContainer/HealthContainer"]
custom_minimum_size = Vector2(150, 25)
layout_mode = 2
max_value = 3.0
value = 3.0
show_percentage = false

[node name="RespawnContainer" type="VBoxContainer" parent="BottomContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="RespawnLabel" type="Label" parent="BottomContainer/RespawnContainer"]
layout_mode = 2
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_constants/shadow_outline_size = 1
theme_override_font_sizes/font_size = 24
text = "RESPAWNING IN 8s"
horizontal_alignment = 1
